# artifold

./: .gitignore  README.md  pyproject.toml
artifold/: __init__.py  build.py  cli.py  config.py  design.py  detect.py  diagnostics.py  importer.py  intent.py  paths.py  scan.py  serve.py  share.py  shoot.py  template.html
artifold/skills/craft/: SKILL.md
docs/: index.html
docs/gallery/30-day-tracker/: craft.html  default.html
docs/gallery/climate-in-7-charts/: craft.html  default.html
docs/gallery/coffee-tier-list/: craft.html  default.html
docs/gallery/gemini-embedding-2/: craft.html  default.html
docs/gallery/git-survival-kit/: craft.html  default.html
docs/gallery/kid-morning-routine/: craft.html  default.html
docs/gallery/macintosh-1984/: craft.html  default.html
docs/gallery/sf-apartments/: craft.html  default.html
docs/gallery/slow-software-manifesto/: craft.html  default.html
docs/gallery/transformers/: craft.html  default.html
docs/gallery/yosemite-climbing/: craft.html  default.html
folio/: __init__.py  build.py  cli.py  config.py  design.py  detect.py  diagnostics.py  importer.py  intent.py  paths.py  provenance.py  scan.py  serve.py  share.py  shoot.py  template.html
folio/skills/craft/: SKILL.md
tasks/: craft-design-research.md  oss-plan.md  rename-to-artifold.md  todo.md  v0.2-intent.md  v0.2-provenance.md  v0.3-craft-skill.md  v0.3-intelligence.md  v0.3-share-import.md  v0.4-redesign.md  v0.5-design-overhaul.md
