[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "artifold"
version = "0.5.1"
description = "Local-first library for your AI-generated HTML artifacts (Claude, ChatGPT, v0, …)."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Shubham Goel" }]
keywords = ["llm", "claude", "chatgpt", "artifacts", "html", "dashboard", "local-first"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Topic :: Utilities",
]
dependencies = [
  "platformdirs>=4.0",
  "playwright==1.51.0",
  "watchdog>=4.0",
]

[project.optional-dependencies]
# Smart layer: LLM-derived intent metadata for search & generation.
# Pure local-only Artifold works without this. Opt in only if you want it.
intent = ["anthropic>=0.40"]

[project.scripts]
artifold = "artifold.cli:main"

[project.urls]
Homepage      = "https://github.com/shubhamgoel27/artifold"
Repository    = "https://github.com/shubhamgoel27/artifold"
Issues        = "https://github.com/shubhamgoel27/artifold/issues"
Documentation = "https://github.com/shubhamgoel27/artifold#readme"
Changelog     = "https://github.com/shubhamgoel27/artifold/blob/main/tasks/"

[tool.hatch.build.targets.wheel]
packages = ["artifold"]

[tool.hatch.build.targets.wheel.force-include]
"artifold/template.html" = "artifold/template.html"
"artifold/skills/craft/SKILL.md" = "artifold/skills/craft/SKILL.md"
